--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,4 +1,4 @@
-FROM logstash:5
+FROM docker.elastic.co/logstash/logstash:6.2.2
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
