--- a/logstash/config/twitter.conf
+++ b/logstash/config/twitter.conf
@@ -1,16 +1,16 @@
-input {  
+input {
     twitter {
-        consumer_key => "** Your consumer key **"
-        consumer_secret => "** Your Consumer Secret **"
-        oauth_token => "** Your oauth token  **"
-        oauth_token_secret => "** your oauth token secret **"
-        keywords => ["foo", "bar"]
+        consumer_key => "${TWITTER_CONSUMER_KEY}"
+        consumer_secret => "${TWITTER_CONSUMER_SECRET}"
+        oauth_token => "${TWITTER_OAUTH_SECRET}"
+        oauth_token_secret => "${TWITTER_OAUTH_TOKEN}"
+        keywords => ["feminism"]
         full_tweet => true
     }
 }
-output {  
+output {
     elasticsearch {
-        hosts =>  ["elasticsearch-node:9200"]
+        hosts =>  elasticsearch-node:9200
         index => "tweets-%{+YYYY.MM.dd}"
     }
 }
