--- a/logstash/config/twitter.conf
+++ b/logstash/config/twitter.conf
@@ -10,7 +10,7 @@ input {
 }
 output {
     elasticsearch {
-        hosts =>  elasticsearch-node:9200
+        hosts => ["elasticsearch-node:9200"]
         index => "tweets-%{+YYYY.MM.dd}"
     }
 }
